--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>TWHG</title>
+        <meta name="description" content="The World's Hardest Game Website">
+    </head>
     <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
-        <div>
-            this is a div
-        </div>
+        The World's Hardest Game Website coming here soon! (by Danicker)
     </body>
 </html>
