--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <html>
     <head>
         <title>TWHG</title>
-        <meta name="description" content="The World's Hardest Game Website">
+        <meta http-equiv="Refresh" content="0; url='wiki-twhg1.html'" />
     </head>
-    <body>
-        The World's Hardest Game Website coming here soon! (by Danicker)
-    </body>
 </html>
