--- a/footer.html
+++ b/footer.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div id="footer-tag">
-            by Danicker
+            The World's Hardest Game
         </div>
         <div>
             <strong>Danicker</strong>
