--- a/sidenav.html
+++ b/sidenav.html
@@ -6,13 +6,14 @@
     </head>
     <body>
         <a href="home.html" class="title single">Home</a>
-        <a class="nolink title single">Getting Started</a>
+        <a href="getting-started.html" class="title single">Getting Started</a>
         <div class="title category">Wikis</div>
         <div class="dropdown">
             <a href="wiki-twhg1.html">TWHG1</a>
             <a class="nolink">TWHG2</a>
             <a class="nolink">TWHG3</a>
             <a class="nolink">TWHG4</a>
+            <!--
             <a class="nolink">TWHG1u</a>
             <a class="nolink">TWHG2u</a>
             <a class="nolink">TWHG3u</a>
@@ -20,19 +21,19 @@
             <a class="nolink">TWHG1m</a>
             <a class="nolink">TWHG2m</a>
             <a class="nolink">TWHG3m</a>
+            -->
         </div>
         <div class="title category">Speedrun Leaderboards</div>
         <div class="dropdown">
-            <a href="https://editor.p5js.org/Danicker/full/-3-3v4BKS">TWHG1 ILs</a>
-            <a href="https://editor.p5js.org/Danicker/full/bQtyxE8gL">TWHG2 ILs</a>
+            <a href="leaderboard-twhg1.html">TWHG1 ILs</a>
+            <a href="leaderboard-twhg2.html">TWHG2 ILs</a>
             <a class="nolink">TWHG3 ILs</a>
             <a class="nolink">TWHG4 ILs</a>
         </div>
-        <a class="nolink title single">Bios</a>
         <div class="title category">Modding</div>
         <div class="dropdown">
-            <a class="nolink">GUIDE</a>
-            <a class="nolink">MOD LIST</a>
+            <a href="mod-guide.html">GUIDE</a>
+            <a href="mod-list.html">MOD LIST</a>
         </div>
         <a class="nolink title single">About</a>
         <script src="sidenav.js"></script>
