--- a/home-content.html
+++ b/home-content.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>Home</h1>
-        <p>Welcome to The World's Hardest Game Website. This is a place for all things TWHG. This website is maintained by Danicker.</p>
+        <p>Welcome to The World's Hardest Game Website! This is a fanmade website created and maintained by Danicker.</p>
+        <p>[Description of what each section of the website is about here, basically directing people to the place they should go]</p>
     </body>
 </html>
