--- a/getting-started-content.html
+++ b/getting-started-content.html
@@ -4,7 +4,72 @@
         <link rel="stylesheet" href="general-style.css">
     </head>
     <body>
+
+        <!------------>
+
         <h1>Getting Started</h1>
-        <p>[Information about how to join the discord server, how to download flash projector and how to download flash files.]</p>
+
+        <!------------>
+
+        <h2>Introduction</h2>
+        <p>The World's Hardest Game is a series of four flash games created by Stephen Critoph in the period 2007-2016. If you're a fan of TWHG then I recommend you join the <a target="_blank" href="https://discord.gg/u4hTXX3">discord server</a>, where the community discusses anything and everything related to TWHG, including speedrunning and custom levels. We always like to have new members and if you have any questions we can help you out.</p>
+
+        <!------------>
+
+        <h2>How To Play</h2>
+        <p>So, you want to play The World's Hardest Game, but you don't know where to start. As of 2021, Adobe Flash is no longer supported in web browsers, however there are still three ways to play The World's Hardest Game:</p>
+
+        <!------------>
+
+        <h3>1. Flash versions using Adobe Flash Projector</h3>
+        <p>The recommended way of playing TWHG is to use Adobe Flash Projector. Adobe Flash Projector is the only official emulator of Adobe Flash. It emulates The World's Hardest Game (almost) exactly as it was experienced prior to 2021 in a web browser. This is the only acceptable method if you wish to submit your run to the main speedrun.com leaderboards (for the HTML5 leaderboard, use the HTML5 version as linked below). To run TWHG in Adobe Flash Projector you will need to download Adobe Flash Projector and download the flash file(s) you wish to run. Check out the following video for more detail:</p>
+
+        <p class="video">
+            <iframe width="480" height="270" src="https://youtube.com/embed/ctypXefjEP4"></iframe>
+        </p>
+
+        <note>[Note: This video is somewhat outdated, you can still use <a target="_blank" href="https://bluemaxima.org/flashpoint/">Flashpoint</a> but the recommended method is using Adobe Flash Projector directly and running the flash files through that. You can download everything you need from my <a target="_blank" href="https://mega.nz/folder/isZ11ACQ#snc5fMW2SlXnpn7hJ-m8sQ">MEGA resources folder</a>]</note>
+
+        <!------------>
+
+        <h3>2. Flash versions using Ruffle</h3>
+        <p>Ruffle is an unofficial flash emulator. It does not emulate enemy collisions completely accurately, and hence is not allowed on the speedrun.com leaderboard, however, the advantage of Ruffle is that you can run it in your web browser without any downloads. There are many websites that use ruffle to run TWHG but here is one option you can use for TWHG1 and TWHG2:</p>
+
+        <ul>
+            <li>TWHG1 Ruffle: <a target="_blank" href="https://www.armorgames.com/play/1043/the-worlds-hardest-game">https://www.armorgames.com/play/1043/the-worlds-hardest-game</a></li>
+            <li>TWHG2 Ruffle: <a target="_blank" href="https://www.addictinggames.com/puzzle/worlds-hardest-game-2">https://www.addictinggames.com/puzzle/worlds-hardest-game-2</a></li>
+        </ul>
+
+        <note>[Note: It is not recommended to run TWHG3 or TWHG4 in ruffle as ruffle does not support ActionScript 3.]</note>
+
+        <!------------>
+
+        <h3>3. The HTML5 versions</h3>
+        <p>Alternatively, you may choose to play the HTML5 versions (sometimes called 'Updates') of The World's Hardest Game. These can be played on coolmathsgames with no downloads however they are quite different from the original versions of the game. TWHG1u was made by Stevie and has its own leaderboard on speedrun.com. The other HTML5 games were not made by Stevie and have substantial flaws, TWHG2u and TWHG4u being impossible to finish. For more information, see the wikis for TWHG1u, TWHG2u, TWHG3u and TWHG4u. You can play the HTML5 versions here:</p>
+
+        <ul>
+            <li>TWHG1 Update: <a target="_blank" href="https://www.coolmathgames.com/0-worlds-hardest-game/play">https://www.coolmathgames.com/0-worlds-hardest-game/play</a></li>
+            <li>TWHG2 Update: <a target="_blank" href="https://www.coolmathgames.com/0-worlds-hardest-game-2/play">https://www.coolmathgames.com/0-worlds-hardest-game-2/play</a></li>
+            <li>TWHG3 Update: <a target="_blank" href="https://www.coolmathgames.com/0-worlds-hardest-game-3/play">https://www.coolmathgames.com/0-worlds-hardest-game-3/play</a></li>
+            <li>TWHG4 Update: <a target="_blank" href="https://www.coolmathgames.com/0-worlds-hardest-game-4/play">https://www.coolmathgames.com/0-worlds-hardest-game-4/play</a></li>
+        </ul>
+
+        <!------------>
+
+        <h2>Speedrunning</h2>
+        <p>Speedrunning times are tracked on the <a target="_blank" href="https://www.speedrun.com/whg">speedrun.com</a> leaderboards for TWHG. If you want to speedrun TWHG, there are a few more things you will need:</p>
+
+        <ul>
+            <li><b>Recording Software:</b> You will need to have a video recording of your run if you wish to submit it to the speedrun.com leaderboards. <a target="_blank" href="https://obsproject.com/download">OBS Studio</a> is recommended for this.</li>
+            <li><b>Livesplit:</b> This is not actually necessary for a speedrun, but is recommended, especially for TWHG3 and TWHG4 which do not have in-built timers. Livesplit allows you to time your runs and compare to your PB in realtime. Download livesplit <a target="_blank" href="https://livesplit.org/downloads/">here</a>.</li>
+        </ul>
+
+        <note>[Note: If you are submitting to the main leaderboards, you must use Adobe Flash Projector or Flashpoint. If you are submitting to the HTML5 leaderboard you must be playing the HTML5 version. Ruffle is not allowed on any speedrun.com leaderboard.]</note>
+
+        <!------------>
+
+        <h2>Custom Levels</h2>
+        <p>Several unofficial level editors have been made by fans of The World's Hardest Game. For more information about how to play custom levels and how to make your own levels, join the <a target="_blank" href="https://discord.gg/u4hTXX3">discord server</a>.</p>
+
     </body>
 </html>
