--- a/leaderboards.html
+++ b/leaderboards.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TWHG2 Leaderboards | TWHG Website</title>
+        <title>Leaderboards | TWHG Website</title>
         <link rel="stylesheet" href="main-layout.css">
+        <link rel="icon" href="images/favicon.png">
     </head>
     <body>
         <div class="header">
@@ -10,7 +11,7 @@
         </div>
         <div class="body">
             <iframe class="sidenav" src="sidenav.html"></iframe>
-            <iframe class="content" src="https://editor.p5js.org/Danicker/full/bQtyxE8gL"></iframe>
+            <iframe class="content" src="leaderboards-content.html"></iframe>
         </div>
         <div class="footer">
             <iframe class="footer" src="footer.html"></iframe>
