--- a/mod-guide.html
+++ b/mod-guide.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Home | TWHG Website</title>
+        <title>Modding | TWHG Website</title>
         <link rel="stylesheet" href="main-layout.css">
+        <link rel="icon" href="images/favicon.png">
     </head>
     <body>
         <div class="header">
