--- a/mod-list-content.html
+++ b/mod-list-content.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Mod List</h1>
-        <p>Check out the mod list in the resources folder <a target="_blank" href="https://mega.nz/folder/isZ11ACQ#snc5fMW2SlXnpn7hJ-m8sQ">here</a></p>
+        <p>Check out the mod list in the resources folder <a target="_blank" href="https://mega.nz/folder/isZ11ACQ#snc5fMW2SlXnpn7hJ-m8sQ">here</a>.</p>
     </body>
 </html>
