--- a/sidenav.html
+++ b/sidenav.html
@@ -9,7 +9,7 @@
         <a href="getting-started.html" class="title single">Getting Started</a>
         <div class="title category">Wikis</div>
         <div class="dropdown">
-            <a href="wiki-twhg1.html">TWHG1</a>
+            <a class="nolink">TWHG1</a>
             <a class="nolink">TWHG2</a>
             <a class="nolink">TWHG3</a>
             <a class="nolink">TWHG4</a>
@@ -23,13 +23,7 @@
             <a class="nolink">TWHG3m</a>
             -->
         </div>
-        <div class="title category">Speedrun Leaderboards</div>
-        <div class="dropdown">
-            <a href="leaderboard-twhg1.html">TWHG1 ILs</a>
-            <a href="leaderboard-twhg2.html">TWHG2 ILs</a>
-            <a class="nolink">TWHG3 ILs</a>
-            <a class="nolink">TWHG4 ILs</a>
-        </div>
+        <a href="leaderboards.html" class="title single">Speedrun Leaderboards</a>
         <div class="title category">Modding</div>
         <div class="dropdown">
             <a href="mod-guide.html">GUIDE</a>
