--- a/wiki-twhg1.html
+++ b/wiki-twhg1.html
@@ -3,6 +3,7 @@
     <head>
         <title>TWHG1 Wiki | TWHG Website</title>
         <link rel="stylesheet" href="main-layout.css">
+        <link rel="icon" href="images/favicon.png">
     </head>
     <body>
         <div class="header">
