--- a/home-content.html
+++ b/home-content.html
@@ -4,8 +4,35 @@
         <link rel="stylesheet" href="general-style.css">
     </head>
     <body>
+
+        <!------------>
+
         <h1>Home</h1>
-        <p>Welcome to The World's Hardest Game Website! This is a fanmade website created and maintained by Danicker.</p>
-        <p>[Description of what each section of the website is about here, basically directing people to the place they should go]</p>
+        <p>Welcome to The World's Hardest Game Website! This is a fanmade website created and maintained by Danicker. This is a place for all things TWHG.</p>
+
+        <!--
+        <ul>
+            <li>If you're new to TWHG and you're looking for general information about setup, speedrunning or custom levels then check out the <a target="_parent" href="getting-started.html">Getting Started</a> page.</li>
+            <li>If you're looking for detailed information about a particular edition of TWHG, check out the Wikis section. Note that pages ending in 'u' refer to the 'Updates' or HTML5 versions and pages ending in 'm' refer to the Mobile versions.</li>
+        </ul>
+
+        <p class="video">
+            <iframe allow="fullscreen" width="480" height="270" src="https://youtube.com/embed/6lZBM-PWuCw"></iframe>
+        </p>
+        -->
+
+        <!------------>
+
+        <h2>Changelog</h2>
+        <p>The World's Hardest Game Website is an ongoing project that will receive updates over time. If you have any feedback or suggestions then please contact Danicker on discord.</p>
+        
+        <h4>Version 1 – ?? March 2023</h4>
+        <ul>
+            <li>Launched TWHG.INFO</li>
+            <li>Added HOME page</li>
+            <li>Added GETTING STARTED page</li>
+        </ul>
+
+        <note>Credit to Jacob Moesner for the TWHG3 composit image used in the header of this website.</note>
     </body>
 </html>
