--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
     <head>
         <title>TWHG</title>
-        <meta http-equiv="Refresh" content="0; url='wiki-twhg1.html'" />
+        <meta http-equiv="Refresh" content="0; url='home.html'" />
     </head>
 </html>
