--- a/home-content.html
+++ b/home-content.html
@@ -8,7 +8,7 @@
         <!------------>
 
         <h1>Home</h1>
-        <p>Welcome to The World's Hardest Game Website! This is a fanmade website created and maintained by Danicker. This is a place for all things TWHG.</p>
+        <p>Welcome to The World's Hardest Game Website! This is a fanmade website created and maintained by Danicker. This is a place for all things TWHG. Hopefully more things will be added in the future so if you have any suggestions for new features or pages then let me know!</p>
 
         <!--
         <ul>
@@ -23,14 +23,121 @@
 
         <!------------>
 
+        <!--
+            Discord Server
+            MEGA Resources Folder
+            Speedrun.com leaderboards
+                TWHG1
+                TWHG2
+                TWHG3
+                TWHG4
+                TWHG Multi
+                TWHG Category Extensions
+            Custom IL Leaderboards
+                TWHG1 (includes SOB)
+                TWHG2
+            Spreadsheets
+                TWHG1 Resolutions https://docs.google.com/spreadsheets/d/1IUpbw8cldyJpzcqqelmbdeGdy72kVNRG0vn5-Nk0Et0/edit?usp=sharing
+                TWHG2 two spreadsheets?
+                TWHG3 https://docs.google.com/spreadsheets/d/1OW3krqRBV1TsP4MvXeoFt67criOyBnnur4S8scm6370/edit#gid=0
+                TWHG4 https://docs.google.com/spreadsheets/d/1IiDQDUgDqRWqof9JB-yItvga8JCX6z9fa46ZGKbhI9E/edit?usp=sharing
+            Editor
+                Abho twhgedit: https://twhgedit.netlify.app/
+                    Guide: https://docs.google.com/document/d/1bNy5JsD_uWM7QeupvYoKvtLcZDPN08lQYkjYS93iQhM/edit?usp=sharing
+                Abho twhgedit2 (unstable): https://twhgedit2.netlify.app/
+                    Guide: https://docs.google.com/document/d/1Y1XPwct-Bb_OMvIVzJLostGjetuIQDfCPkO__P_xzec/edit?usp=sharing
+                Haha's Editor: https://twhg5-mapeditor.haha0201.repl.co/
+        -->
+        <h2>Quick Links</h2>
+        <ul>
+            <li>
+                <a target="_blank" href="https://discord.gg/u4hTXX3"><b>Discord Server</b></a>
+            </li>
+            <li>
+                <a target="_blank" href="https://mega.nz/folder/isZ11ACQ#snc5fMW2SlXnpn7hJ-m8sQ"><b>MEGA Resources Folder</b></a>
+                (includes downloads for all official flash files, modded flash files, adobe flash projector, original soundtrack and remixes and modding resources)
+            </li>
+            <li>
+                <a target="_blank" href="https://www.speedrun.com/whg"><b>Speedrun.com Leaderboards</b></a>
+                <ul>
+                    <li>
+                        <a target="_blank" href="https://www.speedrun.com/whg1">TWHG1</a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://www.speedrun.com/whg2">TWHG2</a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://www.speedrun.com/whg3">TWHG3</a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://www.speedrun.com/whg4">TWHG4</a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://www.speedrun.com/multiwhg">TWHG Multi</a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://www.speedrun.com/whgext">TWHG Category Extensions</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <b>Custom IL Leaderboards</b>
+                <ul>
+                    <li>
+                        <a target="_blank" href="https://editor.p5js.org/Danicker/full/dLtHVZGMs">TWHG1 (includes SOB)</a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://editor.p5js.org/Danicker/full/bQtyxE8gL">TWHG2</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <b>Spreadsheets</b>
+                <ul>
+                    <li>
+                        <a target="_blank" href="https://docs.google.com/spreadsheets/d/1IUpbw8cldyJpzcqqelmbdeGdy72kVNRG0vn5-Nk0Et0/edit?usp=sharing">TWHG1 Resolutions Sheet</a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://docs.google.com/spreadsheets/d/1IjZN1N2_L-DcpBPnaN09xe0b8WGEco3La2Nqxy1n-gY/edit?usp=sharing">TWHG2 Best Theoretical Time Sheet</a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://docs.google.com/spreadsheets/d/1OW3krqRBV1TsP4MvXeoFt67criOyBnnur4S8scm6370/edit#gid=0">TWHG3 Best Theoretical Time Sheet</a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://docs.google.com/spreadsheets/d/1IiDQDUgDqRWqof9JB-yItvga8JCX6z9fa46ZGKbhI9E/edit?usp=sharing">TWHG4 Best Theoretical Time Sheet</a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://docs.google.com/spreadsheets/d/1nUT1Y4wZkYj0BisY3UILIDk7eHP_oPysV9eLAPwiS6I/edit?usp=sharing">Danicker's TWHG Remix List</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <b>Editor</b>
+                <ul>
+                    <li>
+                        <a target="_blank" href="https://twhgedit.netlify.app/">TWHGEDIT by abho</a> (<a target="_blank" href="https://docs.google.com/document/d/1bNy5JsD_uWM7QeupvYoKvtLcZDPN08lQYkjYS93iQhM/edit?usp=sharing">guide</a>)
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://twhgedit2.netlify.app/">TWHGEDIT2 by abho</a> (<a target="_blank" href="https://docs.google.com/document/d/1Y1XPwct-Bb_OMvIVzJLostGjetuIQDfCPkO__P_xzec/edit?usp=sharing">guide</a>) (Warning: This version is unstable)
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://twhg5-mapeditor.haha0201.repl.co/">Haha0201's Editor</a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+
         <h2>Changelog</h2>
         <p>The World's Hardest Game Website is an ongoing project that will receive updates over time. If you have any feedback or suggestions then please contact Danicker on discord.</p>
         
-        <h4>Version 1 – ?? March 2023</h4>
+        <h4>Version 1.0 – 25th March 2023</h4>
         <ul>
-            <li>Launched TWHG.INFO</li>
-            <li>Added HOME page</li>
-            <li>Added GETTING STARTED page</li>
+            <li>Launched TWHG.INFO.</li>
+            <li>Added HOME page.</li>
+            <li>Added GETTING STARTED page.</li>
+            <li>Added WIKIS category (empty).</li>
+            <li>Added SPEEDRUN LEADERBOARDS page (incomplete).</li>
+            <li>Added MODS page (incomplete).</li>
         </ul>
 
         <note>Credit to Jacob Moesner for the TWHG3 composit image used in the header of this website.</note>
