--- a/leaderboards-content.html
+++ b/leaderboards-content.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="general-style.css">
+        <link rel="stylesheet" href="leaderboards.css">
     </head>
     <body>
 
@@ -11,10 +12,12 @@
             <li><a target="_blank" href="https://editor.p5js.org/Danicker/full/dLtHVZGMs">TWHG1 Leaderboard (includes SOB)</a></li>
             <li><a target="_blank" href="https://editor.p5js.org/Danicker/full/bQtyxE8gL">TWHG2 Leaderboard</a></li>
         </ul>
+        <note>This page is incomplete. More leaderboards will be added and they will be embedded here rather than through p5.js</note>
+
+        <!--
         <br>
         <p>v v v <b>Everything below here is for testing purposes</b> v v v</p>
         <br>
-        <p id="test1">Test 1</p>
 
         <table>
             <tr>
@@ -42,6 +45,11 @@
                 <td>1</td>
             </tr>
         </table>
+
+        <div id="loading-bar-container">
+            <div id="loading-bar"></div>
+        </div>
+        -->
 
         <script src="leaderboards.js"></script>
     </body>
