--- a/sidenav.html
+++ b/sidenav.html
@@ -24,12 +24,7 @@
             -->
         </div>
         <a href="leaderboards.html" class="title single">Speedrun Leaderboards</a>
-        <div class="title category">Modding</div>
-        <div class="dropdown">
-            <a href="mod-guide.html">GUIDE</a>
-            <a href="mod-list.html">MOD LIST</a>
-        </div>
-        <a class="nolink title single">About</a>
+        <a href="mods.html" class="title single">Mods</a>
         <script src="sidenav.js"></script>
     </body>
 </html>
