--- a/sidenav.html
+++ b/sidenav.html
@@ -23,7 +23,7 @@
             <a class="nolink">TWHG3m</a>
             -->
         </div>
-        <a href="leaderboards.html" class="title single">Speedrun Leaderboards</a>
+        <a href="leaderboards.html" class="title single">Custom Leaderboards</a>
         <a href="mods.html" class="title single">Mods</a>
         <script src="sidenav.js"></script>
     </body>
