--- a/home-content.html
+++ b/home-content.html
@@ -130,6 +130,19 @@
         <h2>Changelog</h2>
         <p>The World's Hardest Game Website is an ongoing project that will receive updates over time. If you have any feedback or suggestions then please contact Danicker on discord.</p>
         
+        <h4>Version 2.0 – 5th July 2023</h4>
+        <ul>
+            <li>Removed SPEEDRUN LEADERBOARDS.</li>
+            <li>Added CUSTOM LEADERBOARDS search tool:
+                <ul>
+                    <li>Added Normal leaderboard type.</li>
+                    <li>Added Sum of Best leaderboard type.</li>
+                    <li>Added Medal Counts leaderboard type.</li>
+                    <li>Added Recent Runs leaderboard type.</li>
+                </ul>
+            </li>
+        </ul>
+
         <h4>Version 1.0 – 25th March 2023</h4>
         <ul>
             <li>Launched TWHG.INFO.</li>
