--- a/leaderboards-content.html
+++ b/leaderboards-content.html
@@ -108,12 +108,12 @@
             Other options include:
             <ul>
                 <li><b>Verification Status:</b> Unlike my previous leaderboard designs, you can now view runs that have not been verified. This is useful if you want to see what the leaderboard will look like once all pending runs are verified. To do this, simply tick the "unverified" box. Be warned that unverified runs are frequently illegitimate or inaccurate so leaderboards generated this way are not reliable. Also, there is the option to include rejected runs... if you have some reason to do so.</li>
-                <li><b>Date Range:</b> You have the option to set a date range. Only runs within the date range will be considered when the leaderboard is generated. This is useful for seeing what a leaderbaord looked like at some point in the past, or analysing the community activity within a certain window of time.</li>
+                <li><b>Date Range:</b> You have the option to set a date range. Only runs within the date range will be considered when the leaderboard is generated. This is useful for seeing what a leaderboard looked like at some point in the past, or analysing the community activity within a certain window of time.</li>
             </ul>
             Buttons:
             <ul>
                 <li>Click the <b>Generate</b> button to generate the leaderboard.</li>
-                <li>Click the <b>Copy Link</b> button to copy a link to your leaderbaord. This link contains all the information about your search parameters and can be shared with others.</li>
+                <li>Click the <b>Copy Link</b> button to copy a link to your leaderboard. This link contains all the information about your search parameters and can be shared with others.</li>
                 <li>Click the <b>Refresh</b> button to refresh the leaderboard with the current parameters. Refresh the page if you wish to revert to the leaderboard contained in the url. Click "Custom Leaderboards" in the side navigation if you wish to completely reset the leaderboard to default parameters.</li>
             </ul>
             <p>Any bugs or suggestions please contact Danicker on discord.</p>
