--- a/home-content.html
+++ b/home-content.html
@@ -129,7 +129,12 @@
 
         <h2>Changelog</h2>
         <p>The World's Hardest Game Website is an ongoing project that will receive updates over time. If you have any feedback or suggestions then please contact Danicker on discord.</p>
-        
+
+        <h4>Version 2.1 – 5th July 2023</h4>
+        <ul>
+            <li>Fixed issue with Copy Link button from Custom Leaderboards.</li>
+        </ul>
+
         <h4>Version 2.0 – 5th July 2023</h4>
         <ul>
             <li>Removed SPEEDRUN LEADERBOARDS.</li>
