--- a/home-content.html
+++ b/home-content.html
@@ -23,31 +23,7 @@
 
         <!------------>
 
-        <!--
-            Discord Server
-            MEGA Resources Folder
-            Speedrun.com leaderboards
-                TWHG1
-                TWHG2
-                TWHG3
-                TWHG4
-                TWHG Multi
-                TWHG Category Extensions
-            Custom IL Leaderboards
-                TWHG1 (includes SOB)
-                TWHG2
-            Spreadsheets
-                TWHG1 Resolutions https://docs.google.com/spreadsheets/d/1IUpbw8cldyJpzcqqelmbdeGdy72kVNRG0vn5-Nk0Et0/edit?usp=sharing
-                TWHG2 two spreadsheets?
-                TWHG3 https://docs.google.com/spreadsheets/d/1OW3krqRBV1TsP4MvXeoFt67criOyBnnur4S8scm6370/edit#gid=0
-                TWHG4 https://docs.google.com/spreadsheets/d/1IiDQDUgDqRWqof9JB-yItvga8JCX6z9fa46ZGKbhI9E/edit?usp=sharing
-            Editor
-                Abho twhgedit: https://twhgedit.netlify.app/
-                    Guide: https://docs.google.com/document/d/1bNy5JsD_uWM7QeupvYoKvtLcZDPN08lQYkjYS93iQhM/edit?usp=sharing
-                Abho twhgedit2 (unstable): https://twhgedit2.netlify.app/
-                    Guide: https://docs.google.com/document/d/1Y1XPwct-Bb_OMvIVzJLostGjetuIQDfCPkO__P_xzec/edit?usp=sharing
-                Haha's Editor: https://twhg5-mapeditor.haha0201.repl.co/
-        -->
+        
         <h2>Quick Links</h2>
         <ul>
             <li>
@@ -112,13 +88,16 @@
                 </ul>
             </li>
             <li>
-                <b>Editor</b>
+                <b>Editors</b>
                 <ul>
                     <li>
                         <a target="_blank" href="https://twhgedit.netlify.app/">TWHGEDIT by abho</a> (<a target="_blank" href="https://docs.google.com/document/d/1bNy5JsD_uWM7QeupvYoKvtLcZDPN08lQYkjYS93iQhM/edit?usp=sharing">guide</a>)
                     </li>
                     <li>
                         <a target="_blank" href="https://twhgedit2.netlify.app/">TWHGEDIT2 by abho</a> (<a target="_blank" href="https://docs.google.com/document/d/1Y1XPwct-Bb_OMvIVzJLostGjetuIQDfCPkO__P_xzec/edit?usp=sharing">guide</a>) (Warning: This version is unstable)
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://abho.itch.io/twhg-ue">TWHGEDIT3 by abho</a>
                     </li>
                     <li>
                         <a target="_blank" href="https://twhg5-mapeditor.haha0201.repl.co/">Haha0201's Editor</a>
@@ -129,6 +108,12 @@
 
         <h2>Changelog</h2>
         <p>The World's Hardest Game Website is an ongoing project that will receive updates over time. If you have any feedback or suggestions then please contact Danicker on discord.</p>
+
+        <h4>Version 2.2 – 22nd August 2023</h4>
+        <ul>
+            <li>Created <a target="_blank" href="http://twhg.info/discord">http://twhg.info/discord</a> and <a target="_blank" href="http://twhg.info/resources">http://twhg.info/resources</a> links.</li>
+            <li>Added TWHGEDIT3 to quick links.</li>
+        </ul>
 
         <h4>Version 2.1 – 5th July 2023</h4>
         <ul>
