--- a/getting-started-content.html
+++ b/getting-started-content.html
@@ -28,12 +28,12 @@
             <iframe width="480" height="270" src="https://youtube.com/embed/ctypXefjEP4"></iframe>
         </p>
 
-        <note>[Note: This video is somewhat outdated, you can still use <a target="_blank" href="https://bluemaxima.org/flashpoint/">Flashpoint</a> but the recommended method is using Adobe Flash Projector directly and running the flash files through that. You can download everything you need from my <a target="_blank" href="https://mega.nz/folder/isZ11ACQ#snc5fMW2SlXnpn7hJ-m8sQ">MEGA resources folder</a>]</note>
+        <note>[Note: This video is somewhat outdated, you can still use <a target="_blank" href="https://bluemaxima.org/flashpoint/">Flashpoint</a> but the recommended method is using Adobe Flash Projector directly and running the flash files through that. You can download everything you need from my <a target="_blank" href="https://mega.nz/folder/isZ11ACQ#snc5fMW2SlXnpn7hJ-m8sQ">MEGA resources folder</a>.]</note>
 
         <!------------>
 
         <h3>2. Flash versions using Ruffle</h3>
-        <p>Ruffle is an unofficial flash emulator. It does not emulate enemy collisions completely accurately, and hence is not allowed on the speedrun.com leaderboard, however, the advantage of Ruffle is that you can run it in your web browser without any downloads. There are many websites that use ruffle to run TWHG but here is one option you can use for TWHG1 and TWHG2:</p>
+        <p>Ruffle is an unofficial flash emulator. It does not emulate enemy collisions completely accurately, and hence is not allowed on the speedrun.com leaderboard. However, the advantage of Ruffle is that you can run it in your web browser without any downloads. There are many websites that use ruffle to run TWHG but here is one option you can use for TWHG1 and TWHG2:</p>
 
         <ul>
             <li>TWHG1 Ruffle: <a target="_blank" href="https://www.armorgames.com/play/1043/the-worlds-hardest-game">https://www.armorgames.com/play/1043/the-worlds-hardest-game</a></li>
