--- a/home-content.html
+++ b/home-content.html
@@ -8,7 +8,7 @@
         <!------------>
 
         <h1>Home</h1>
-        <p>Welcome to The World's Hardest Game Website! This is a fanmade website created and maintained by Danicker. This is a place for all things TWHG. Hopefully more things will be added in the future so if you have any suggestions for new features or pages then let me know!</p>
+        <p>Welcome to The World's Hardest Game Website! This is a fanmade website created and maintained by Danicker. This is a place for all things TWHG. This website is an ongoing project and more things will be added in the future, if you have any suggestions for new features or pages then let me know!</p>
 
         <!--
         <ul>
@@ -57,17 +57,6 @@
                 </ul>
             </li>
             <li>
-                <b>Custom IL Leaderboards</b>
-                <ul>
-                    <li>
-                        <a target="_blank" href="https://editor.p5js.org/Danicker/full/dLtHVZGMs">TWHG1 (includes SOB)</a>
-                    </li>
-                    <li>
-                        <a target="_blank" href="https://editor.p5js.org/Danicker/full/bQtyxE8gL">TWHG2</a>
-                    </li>
-                </ul>
-            </li>
-            <li>
                 <b>Spreadsheets</b>
                 <ul>
                     <li>
@@ -84,6 +73,12 @@
                     </li>
                     <li>
                         <a target="_blank" href="https://docs.google.com/spreadsheets/d/1nUT1Y4wZkYj0BisY3UILIDk7eHP_oPysV9eLAPwiS6I/edit?usp=sharing">Danicker's TWHG Remix List</a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://docs.google.com/spreadsheets/d/1mObZAzsn0d7Lwam9APQeg0UGaQqWsPLKbDy6g25bVIM/edit?usp=sharing">TWHG All Texts, Tips and Speeches</a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://docs.google.com/spreadsheets/d/18RvtznzGjvYAfQ4_ZOjvUeKYRIwFiWM34xXw7V80VHk/edit?usp=sharing">TWHG Colours</a>
                     </li>
                 </ul>
             </li>
@@ -108,6 +103,26 @@
 
         <h2>Changelog</h2>
         <p>The World's Hardest Game Website is an ongoing project that will receive updates over time. If you have any feedback or suggestions then please contact Danicker on discord.</p>
+
+        <h4>Version 3.0 – 18th December 2023</h4>
+        <ul>
+            <li>Added ROUTE LIST page. This is a place where common routes for TWHG will be documented, and can be viewed and compared. There is currently only support for TWHG1 and TWHG2, and also currently only a limited number of routes. This is just the first version of the Route List and it will be improved over time. If you would like to help contribute to the Route List, contact Danicker on discord.</li>
+            <li>Some minor improvements to CUSTOM LEADERBOARDS:
+                <ul>
+                    <li>Player names now appear in bold font, coloured according to their speedrun.com user profile.</li>
+                    <li>You can now hover over some entries in leaderboard tables for extra information. 
+                        <ul>
+                            <li>Hovering over the "Multiple" player tag in a Sum of Best table will display the players that contributed towards the community SoB (and how many categories they contributed to).</li>
+                            <li>Hovering over the numbers in a Medal Count table will show which categories the player holds that medal in.</li>
+                            <li>Hovering over a date will show how many years/days have passed since that date.</li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <li>Removed old TWHG1 and TWHG2 custom leaderboards from Quick Links.</li>
+            <li>Added TWHG Texts and TWHG Colours Spreadsheets to Quick Links.</li>
+            <li>Changed <a target="_blank" href="http://twhg.info/discord">http://twhg.info/discord</a> invite to point to #help instead of #lobby.</li>
+        </ul>
 
         <h4>Version 2.2 – 22nd August 2023</h4>
         <ul>
