--- a/leaderboards-content.html
+++ b/leaderboards-content.html
@@ -87,9 +87,21 @@
             <button id="refresh-button">Refresh</button>
             <br>
     
+            <!-- Graphics -->
+            <div id="graphics-div">
+                <h2>Graphics</h2>
+                <div id="graphics-container">
+                    <canvas id="graphics-canvas" width="0" height="0"></canvas>
+                </div>
+                <br>
+            </div>
+
             <!-- Table -->
-            <h2>Leaderboard</h2>
-            <div id="table-container"></div><br>
+            <div id="leaderboard-div">
+                <h2>Leaderboard</h2>
+                <div id="table-container"></div>
+                <br>
+            </div>
 
             <!-- Info -->
             <h2>How to use</h2>
