--- a/sidenav.html
+++ b/sidenav.html
@@ -24,6 +24,7 @@
             -->
         </div>
         <a href="leaderboards.html" class="title single">Custom Leaderboards</a>
+        <a href="routes.html" class="title single">Route List</a>
         <a href="mods.html" class="title single">Mods</a>
         <script src="sidenav.js"></script>
     </body>
