--- a/discord.html
+++ b/discord.html
@@ -2,6 +2,6 @@
 <html>
     <head>
         <title>TWHG</title>
-        <meta http-equiv="Refresh" content="0; url='https://discord.gg/xyAvFS4'" />
+        <meta http-equiv="Refresh" content="0; url='https://discord.gg/u4hTXX3'" />
     </head>
 </html>
