--- a/getting-started-content.html
+++ b/getting-started-content.html
@@ -22,13 +22,23 @@
         <!------------>
 
         <h3>1. Flash versions using Adobe Flash Projector</h3>
-        <p>The recommended way of playing TWHG is to use Adobe Flash Projector. Adobe Flash Projector is the only official emulator of Adobe Flash. It emulates The World's Hardest Game (almost) exactly as it was experienced prior to 2021 in a web browser. This is the only acceptable method if you wish to submit your run to the main speedrun.com leaderboards (for the HTML5 leaderboard, use the HTML5 version as linked below). To run TWHG in Adobe Flash Projector you will need to download Adobe Flash Projector and download the flash file(s) you wish to run. Check out the following video for more detail:</p>
-
-        <p class="video">
-            <iframe width="480" height="270" src="https://youtube.com/embed/ctypXefjEP4"></iframe>
+        <p>The recommended way of playing TWHG is to use Adobe Flash Projector. Adobe Flash Projector is the only official emulator of Adobe Flash. It emulates The World's Hardest Game (almost) exactly as it was experienced prior to 2021 in a web browser. This is the only acceptable method if you wish to submit your run to the main speedrun.com leaderboards (for the HTML5 leaderboard, use the HTML5 version as linked below).</p>
+        <br>
+        <p>To run TWHG in Adobe Flash Projector you will need to complete the following steps:
+            <ul>
+                <li><b>Download Adobe Flash Projector:</b> Go to <a target="_blank" href="http://twhg.info/resources">http://twhg.info/resources</a>, open the Adobe Flash Projector Downloads folder and read the INFO file to find the right version to download for your operating system.</li>
+                <li><b>Download TWHG flash files:</b> Download the flash file(s) you want to run from <a target="_blank" href="http://twhg.info/resources">http://twhg.info/resources</a>. Flash Files have the .swf file extension. In the resources folder you can find the official releases of TWHG, speedrun/practice mods and other mods.</li>
+                <li><b>Open your flash file(s) using Adobe Flash Projector:</b> There are a few ways you can do this, if one doesn't work for you then try another way:
+                    <ul>
+                        <li>Right click on your .swf and then click "Open with" and select Adobe Flash Projector. If you then set Adobe Flash Projector as the default app to open .swf files you can open any other .swf files by just double clicking on them.</li>
+                        <li>Open Adobe Flash Projector and then click and drag your .swf into it.</li>
+                        <li>Open Adobe Flash Projector and then click File -> Open or Ctrl+O then select your .swf file.</li>
+                    </ul>
+                </li>
+            </ul>
         </p>
 
-        <note>[Note: This video is somewhat outdated, you can still use <a target="_blank" href="https://bluemaxima.org/flashpoint/">Flashpoint</a> but the recommended method is using Adobe Flash Projector directly and running the flash files through that. You can download everything you need from my <a target="_blank" href="https://mega.nz/folder/isZ11ACQ#snc5fMW2SlXnpn7hJ-m8sQ">MEGA resources folder</a>.]</note>
+        <note>If you are still having issues running flash files then join the discord server and ask for help.</note>
 
         <!------------>
 
@@ -45,7 +55,7 @@
         <!------------>
 
         <h3>3. The HTML5 versions</h3>
-        <p>Alternatively, you may choose to play the HTML5 versions (sometimes called 'Updates') of The World's Hardest Game. These can be played on coolmathsgames with no downloads however they are quite different from the original versions of the game. TWHG1u was made by Stevie and has its own leaderboard on speedrun.com. The other HTML5 games were not made by Stevie and have substantial flaws, TWHG2u and TWHG4u being impossible to finish. For more information, see the wikis for TWHG1u, TWHG2u, TWHG3u and TWHG4u. You can play the HTML5 versions here:</p>
+        <p>Alternatively, you may choose to play the HTML5 versions (sometimes called 'Updates') of The World's Hardest Game. These can be played on coolmathsgames with no downloads however they are quite different from the original versions of the game. TWHG1u was made by Stevie and has its own leaderboard on speedrun.com. The other HTML5 games were not made by Stevie and have substantial flaws, TWHG2u and TWHG4u being impossible to finish. You can play the HTML5 versions here:</p>
 
         <ul>
             <li>TWHG1 Update: <a target="_blank" href="https://www.coolmathgames.com/0-worlds-hardest-game/play">https://www.coolmathgames.com/0-worlds-hardest-game/play</a></li>
@@ -61,7 +71,7 @@
 
         <ul>
             <li><b>Recording Software:</b> You will need to have a video recording of your run if you wish to submit it to the speedrun.com leaderboards. <a target="_blank" href="https://obsproject.com/download">OBS Studio</a> is recommended for this.</li>
-            <li><b>Livesplit:</b> This is not actually necessary for a speedrun, but is recommended, especially for TWHG3 and TWHG4 which do not have in-built timers. Livesplit allows you to time your runs and compare to your PB in realtime. Download livesplit <a target="_blank" href="https://livesplit.org/downloads/">here</a>.</li>
+            <li><b>Livesplit:</b> This is not required for a speedrun, but can be helpful, especially if you are using a version of TWHG that does not have a timer. Livesplit allows you to time your runs and compare to your PB in realtime. Download livesplit <a target="_blank" href="https://livesplit.org/downloads/">here</a>.</li>
         </ul>
 
         <note>[Note: If you are submitting to the main leaderboards, you must use Adobe Flash Projector or Flashpoint. If you are submitting to the HTML5 leaderboard you must be playing the HTML5 version. Ruffle is not allowed on any speedrun.com leaderboard.]</note>
@@ -69,7 +79,7 @@
         <!------------>
 
         <h2>Custom Levels</h2>
-        <p>Several unofficial level editors have been made by fans of The World's Hardest Game. For more information about how to play custom levels and how to make your own levels, join the <a target="_blank" href="https://discord.gg/u4hTXX3">discord server</a>.</p>
+        <p>Several unofficial level editors have been made by fans of The World's Hardest Game. For quick links see the home page. For more information about how to play custom levels and how to make your own levels, join the <a target="_blank" href="https://discord.gg/u4hTXX3">discord server</a> and check the pinned messages in the #editor channel.</p>
 
     </body>
 </html>
