--- a/home-content.html
+++ b/home-content.html
@@ -95,7 +95,7 @@
                         <a target="_blank" href="https://abho.itch.io/twhg-ue">TWHGEDIT3 by abho</a>
                     </li>
                     <li>
-                        <a target="_blank" href="https://twhg5-mapeditor.haha0201.repl.co/">Haha0201's Editor</a>
+                        <a target="_blank" href="https://twhg5-mapeditor.haha0201.repl.co/">haha0201's Editor</a>
                     </li>
                 </ul>
             </li>
@@ -103,6 +103,17 @@
 
         <h2>Changelog</h2>
         <p>The World's Hardest Game Website is an ongoing project that will receive updates over time. If you have any feedback or suggestions then please contact Danicker on discord.</p>
+
+        <h4>Version 3.1 – 23rd February 2024</h4>
+        <ul>
+            <li>Made some minor changes to GETTING STARTED to hopefully make it more accurate and more helpful.</li>
+            <li>Some minor improvements to CUSTOM LEADERBOARDS:
+                <ul>
+                    <li>Fixed bug where times containing minutes would sometimes only show one digit for seconds.</li>
+                    <li>Removed glitched categories for TWHG2 since those don't exist anymore.</li>
+                </ul>
+            </li>
+        </ul>
 
         <h4>Version 3.0 – 18th December 2023</h4>
         <ul>
